Closer to the logo

--- a/dbsnp.css
+++ b/dbsnp.css
@@ -2,3 +2,19 @@ html, body {
   width: 100%;
   background-color: #DDDBF1;
 }
+
+.nucA {
+  fill: rgb(6.27451%,58.823529%,28.235294%);
+}
+
+.nucT {
+  fill: rgb(83.921569%,15.686275%,22.352941%);
+}
+
+.nucG {
+  fill: rgb(96.862745%,70.196078%,16.862745%);
+}
+
+.nucC {
+  fill: rgb(14.509804%,36.078431%,60%);
+}
