--- a/master.css
+++ b/master.css
@@ -31,7 +31,7 @@ color:#383F51;
 	display: block;
 	clear: both;
 	width: 90%;
-	height: 10%;
+	height: 75px;
 	margin-left: 5%;
 	background-color: #3C4F76;
 
@@ -72,6 +72,12 @@ outline:0;
 
         color:#3C4F76;
 
+}
+
+#introduction {
+  width: 90%;
+  margin-left: 5%;
+  background-color:#AB9F9D;
 }
 
 #iframeparent {
