--- a/master.css
+++ b/master.css
@@ -83,19 +83,16 @@ outline:0;
   background-color:#AB9F9D;
 }
 
-#iframeparent {
+#maincontent {
   margin-left: 5%;
   width: 90%;
-  overflow: auto;
-  height: auto;
-  display: block;
-  background-color:#AB9F9D;
-  z-index: 1;
 }
+
 iframe{
 	width:100%;
 	height: 100%;
 }
+
 d{
 	float: left;
 	position: relative;
@@ -226,7 +223,7 @@ img {
 ul.navlink{
 	float:left;
 	font-size: 1.5em;
-	margin-left: 7.5%;
+	margin-left: 5%;
 	display: block;
 	list-style: none;
 	padding-bottom: 3%;
