--- a/slideshow.css
+++ b/slideshow.css
@@ -1,5 +1,9 @@
 * {box-sizing:border-box}
 
+.slideimg {
+  margin: auto;
+}
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
