--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ body {
 }
 
 .foo{
-        float: left;
-        display: block;
-        clear: both;
-        width: 90%;
-        height: 75px;
-        margin-left: 5%;
-        background-color: #3C4F76;
-
+  float: left;
+  display: block;
+  clear: both;
+  width: 90%;
+  height: 75px;
+  margin-left: 5%;
+  background-color: #3C4F76;
+  margin-right: 5%;
 }
 
 ul{
@@ -419,11 +419,6 @@ a.cell_unselected  {
   background-color: white;
   height:100%;
 }
-
-.threechosen {
-padding: 0.5em;
-}
-
 
 .paired_button {
 height: 3em;
