--- a/motif.css
+++ b/motif.css
@@ -2,6 +2,41 @@ div {
   float: left;
 }
 
+#motifchart1 {
+  width:75% ;background-color: white;border:1px solid black;height:47em;
+  float: left;
+  margin-left: 5%;
+  position:relative;
+}
+
+#motifchart2 {
+  width:15%;
+  overflow-y: scroll;
+  background-color: white;
+  border:1px solid black;
+  height:47em;
+  position: relative;
+}
+
+#motifchart3 {
+  width:75%;background-color: white;border:1px solid black;height:11em;position: relative;
+  //overflow: auto;
+  margin-left: 5%;
+  position: relative;
+}
+
+#motifchart4 {
+  width:15%; background-color: white;height:11em;border:1px solid black;
+}
+
+#motifchart4 p {
+  margin-left:5px;margin-top:3px;margin-bottom:0px;
+}
+
+#motifchart4 img {
+  width:95%;height:61%;opacity=30%;margin-right: 1px;margin-top: 1px;
+}
+
 #mbuttons {
   text-align: left;width: 40%;
   margin-left: 5%;
@@ -36,8 +71,8 @@ div {
 }
 
 #categoryhelp {
-  top: 19em;
-  left: 92%;
+  top: 10%;
+  left: 80%;
 }
 
 #sethelp {
@@ -49,38 +84,39 @@ div {
 }
 
 #canvashelp {
-  top: 19em;
-  left: 75%;
+  top: 9%;
+  left: 95%;
 }
 
 #scattertooltip {
-  top: 22em;
+  top: 10%;
   left: 40%;
 }
 
 #yaxistooltip {
-  top: 19em;
+  top: 20%;
   left: 5%;
 }
 
 #xaxistooltip {
-  top: 65em;
-  left: 15%;
+  top: 63%;
+  left: 70%;
 }
 
 #categorytooltip {
   top: 30em;
   left: 75%;
+  z-index: 20;
 }
 
 #threetooltip {
-  top: 70em;
-  left: 18%;
+  top: 10%;
+  left: 8%;
   z-index: 20;
 }
 
 #cleartooltip {
-  top: 85em;
+  top: 60%;
   left: 40%;
   z-index: 20;
 }
